# robocasa

./: .gitignore  .gitmodules  README.md  benchmark.md  history.md  install.md  pyproject.toml  setup.py
.nautilus/: benchmark-spec.json  install_plan.json  probe.json  robocasa.json
.nautilus/run-log/: 01-env-generator.md
docker/: Dockerfile  README.md  check_prereqs.sh  docker-compose.headless.yaml  docker-compose.x11.yaml  entrypoint.sh
docs/: index.rst
docs/use_cases/: policy_server.md
robocasa/grpc/: __init__.py  generate_proto.sh  policy_service.proto  policy_service_pb2.py  policy_service_pb2_grpc.py
robocasa/utils/: run_utils.py
scripts/: run_demo.py  run_eval.py
tests/: test_ac_policy_server.py  test_arm_controller.py  test_random_policy_server.py
